infrastructure/security/network-policies/overlays/dev/ms-post.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ms-post-policy
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: ms-post
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: api-gateway
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: ms-post-db
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: redis
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
