infrastructure/security/network-policies/overlays/dev/ms-storage.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ms-storage-policy
  namespace: dev
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - ms-storage
      - post-processor-storage
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: app
          operator: In
          values:
          - api-gateway
          - worker-storage
          - ms-storage
          - post-processor-storage
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: ms-storage-db
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: redis
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
