infrastructure/security/network-policies/overlays/dev/runners-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: runners-policy
  namespace: dev
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - outbox-user
          - worker-user
          - outbox-post
          - worker-post
          - outbox-event
          - worker-event
          - outbox-social
          - worker-social
          - post-processor-user
          - post-processor-post
          - post-processor-event
          - post-processor-social
          - post-processor-storage
          - outbox-storage
          - worker-storage
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: postgresql
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: redis
        - podSelector:
            matchLabels:
              app: neo4j
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - api-gateway
                  - ms-user
                  - ms-post
                  - ms-social
                  - ms-event
                  - ws-service
                  - ms-storage
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
