infrastructure/security/network-policies/overlays/dev/ws-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ws-service-policy
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: ws-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
        - podSelector:
            matchLabels:
              app: ws-service
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: ws-service
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: redis
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ws-service-redis-policy
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: ws-service-redis
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: ws-service
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
